# f_vigs_slam

./: CMakeLists.txt  CORE_DEVELOPMENT_ROADMAP.md  RASTERIZATION_REFERENCE.md  README.md  SETUP_VERIFICATION.md  package.xml
docs/: KEYFRAME_SELECTOR_INTEGRATION.md
examples/: KeyframeSelector_example.cpp
include/f_vigs_slam/: CudaMathOperations.cuh  GSCudaKernels.cuh  GSSlam.cuh  GSSlamNode.hpp  GaussianSplattingViewer.hpp  ImuCostFunction.hpp  KeyframeSelector.hpp  RepresentationClasses.hpp
install/: local_setup.sh  setup.sh
install/f_vigs_slam/lib/f_vigs_slam/: gs_slam_node
install/f_vigs_slam/share/ament_index/resource_index/package_run_dependencies/: f_vigs_slam
install/f_vigs_slam/share/ament_index/resource_index/parent_prefix_path/: f_vigs_slam
install/f_vigs_slam/share/f_vigs_slam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/f_vigs_slam/share/f_vigs_slam/cmake/: f_vigs_slamConfig.cmake
install/f_vigs_slam/share/f_vigs_slam/launch/: gs_slam_launch.py
log/: latest_build
src/: GSCudaKernels.cu  GSSlam.cu  GSSlamNode.cpp  GaussianSplattingViewer.cpp  ImuCostFunction.cpp  KeyframeSelector.cpp  MarginalizationFactor.cpp  PoseLocalParameterization.cpp  Preintegration.cpp  RgbdPoseCost.cu
